apps/inventory-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-app
  namespace: inventory-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-app
  template:
    metadata:
      labels:
        app: inventory-app
    spec:
      containers:
        - name: inventory-app
          # Denna tagg uppdateras av din GitHub Action
          image: 936777225880.dkr.ecr.eu-north-1.amazonaws.com/inventory-tracker-app:bf191503808732b39bcca7b8e5f7ded8132f8ad3
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
