apps/inventory-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-app-service
  namespace: inventory-tracker
spec:
  selector:
    app: inventory-app # Måste matcha label i din deployment.yaml
  ports:
    - protocol: TCP
      port: 80 # Porten du surfar på (http://...)
      targetPort: 5000 # Porten som din Flask-app lyssnar på i containern
  type: LoadBalancer # Skapar en publik adress via MetalLB i ditt hemlabb
